# Biblioteca-Estrutura-Dados

./: .gitignore
data/: biblioteca.sqlite3
gui/: __init__.py  app.py  ctk_theme.json  main.py  models.py  storage.py  theme.py
modules/core/: pyproject.toml
modules/core/.venv312/: pyvenv.cfg
modules/core/csrc/: PyPilhaHistorico.c  core.c  historico.c  listaEncadeada.c  livro.c  pilhaHistorico.c  pyHistorico.c  pyListaEncadeada.c  pyLivro.c
modules/core/include/: historico.h  listaEncadeada.h  livro.h  pilhaHistorico.h  pyHistorico.h  pyListaEncadeada.h  pyLivro.h  pyPilhaHistorico.h
modules/core/src/: historico.c  listaEncadeada.c  livro.c  pilhaHistorico.c
modules/core/src/core/: __init__.pyi  historico.pyi  lista_encadeada.pyi  livro.pyi  pilhahistorico.pyi
