[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core"
version = "0.0.1"

[tool.setuptools]
package-dir = {"" = "src"}
ext-modules = [
    { name = "core", sources = [
        "csrc/core.c",
        "csrc/historico.c",
        "csrc/listaEncadeada.c",
        "csrc/livro.c",
        "csrc/pilhaHistorico.c",
        "csrc/pyHistorico.c",
        "csrc/pyListaEncadeada.c",
        "csrc/pyLivro.c"
    ] }
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
core = ["*.pyi"]